force-app/main/default/objects/Social_Profile__c/Social_Profile__c.object-meta.xml
<CustomObject>
    <label>Social Profile</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Social Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>