force-app/main/default/objects/Social_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FullContact_Social_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>