force-app/main/default/objects/Social_Profile__c/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <description>How many people are connected to/following this person</description>
    <label>Followers</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>