force-app/main/default/objects/Social_Profile__c/fields/Following__c.field-meta.xml
<CustomField>
    <fullName>Following__c</fullName>
    <description>How many people this person is connected to/following</description>
    <label>Following</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>