force-app/main/default/objects/Social_Profile__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>FullContact_Social_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>