force-app/main/default/objects/Social_Profile__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <label>Type Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>