force-app/main/default/objects/Social_Profile__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Url to social profile</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>